<resources>
    <string name="app_name">Unidad1</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subst">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="div">/</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="type_name">Type name</string>
    <string name="type_age">Type age</string>
    <string name="type_phone">Type phone</string>
    <string name="submit">Submit</string>
    <string name="your_data">Your data</string>
    <string name="exit">exit</string>
</resources>
