<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="4"
    android:orientation="horizontal"
    tools:context="com.example.paola.unidad1.GridLayout"
    xmlns:tools="http://schemas.android.com/tools">


    <Button android:text="@string/_7"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_7"/>

    <Button android:text="@string/_8"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_8"/>

    <Button android:text="@string/_9"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_9"/>

    <Button android:text="@string/multiplication"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_multi"/>

    <Button android:text="@string/_4"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_4"/>

    <Button android:text="@string/_5"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_5"/>

    <Button android:text="@string/_6"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_6"/>

    <Button android:text="@string/subst"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_subst"/>

    <Button android:text="@string/_1"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_1"/>

    <Button android:text="@string/_2"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_2"/>

    <Button android:text="@string/_3"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_3"/>

    <Button android:text="@string/plus"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_plus"/>

    <Button android:text="@string/div"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_div"/>

    <Button android:text="@string/_0"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_0"/>

    <Button android:text="@string/dot"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_dot"/>

    <Button android:text="@string/equal"
        android:textSize="@dimen/text_size"
        android:id="@+id/btn_equal"/>

</GridLayout>